  - added rake simp:packer:oldbuild to run with just test directory
    like the old days for a temporary bridge.
* Changes to simp.json template require packer version 1.4.0.  (The valid_exit_codes
  entry added during script reboot will ignore spurious errors that happen
  when the reboot script throws an error because it rebooted during the script.)
* Fixed errors in  simp:packer:build logic.

Mon Apr 01 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - UNRELEASED

This patch refactors the `simp_packer_test.sh` and `simp_config.rb` scripts
into testable Ruby classes, and adds a few example unit tests.


* Added:
  - New rake task: `simp:packer:build`
  - New Rake task: `packer:validate`
  - Initial Ruby Unit tests
  - Each matrix log now includes information about its iteration
* Changed:
  - Fixed `VBoxManage hostonlyif ipconfig` logic
  - Refactored `simp_config.rb` and `simp_packer_test.sh` into code under `lib/`
* Removed:
  - Scripts: `simp_packer_test.sh` and `simp_config.rb`


Thu Nov 15 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.3.0

This release supports Puppet 5 and Hiera 5:

* Added:
  - `Simp::Packer::Publish::LocalDirTree.publish`
  - Matrix logs include iteration report
  - Matrix `encryption=on` automatically adds 2 minutes to `big_sleep`

* Changed:
  - Use Puppet 5 Hiera data paths (unless the version of SIMP is less than
    6.3.0)
  - Matrix builds stop on failures in `simp_packer_test.sh`
  - Forced environment in `scripts/puppet-usersetup.sh` to permit `vagrant`
    sudo access on boxes that don't run `scripts/simp-bootstrap.sh`
  - Add a longer `big_sleep` by default for centos 6 + 7
  - Renamed `rake vagrant:boxname` to `rake vagrant:json`


Mon Oct 02 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.2.2

This release is primarily a documentation update:

* Added:
  - README sections:
    - "Supported SIMP releases"
    - "Running a build matrix"
    - "TODO > Box roles"